Flatte2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> empty
Rule 2     statements -> statement DOUBLESEMICOLON statements
Rule 3     statement -> expression
Rule 4     statement -> command
Rule 5     expression -> expression PLUS expression
Rule 6     expression -> expression MINUS expression
Rule 7     expression -> expression TIMES expression
Rule 8     expression -> expression DIVIDE expression
Rule 9     expression -> expression MOD expression
Rule 10    expression -> expression EQUALS expression
Rule 11    expression -> expression LEQ expression
Rule 12    expression -> expression LT expression
Rule 13    expression -> expression GEQ expression
Rule 14    expression -> expression GT expression
Rule 15    expression -> expression AND expression
Rule 16    expression -> expression OR expression
Rule 17    expression -> expression NOTEQUALS expression
Rule 18    expression -> MINUS expression
Rule 19    expression -> FST expression
Rule 20    expression -> SND expression
Rule 21    expression -> NOT expression
Rule 22    expression -> LET NAME EQUALS expression IN expression
Rule 23    expression -> LET NAME args EQUALS expression IN expression
Rule 24    expression -> IF expression THEN expression ELSE expression
Rule 25    expression -> basicexpression basicexpression
Rule 26    expression -> FUN NAME ARROW expression
Rule 27    expression -> basicexpression
Rule 28    basicexpression -> LPAREN expression RPAREN
Rule 29    basicexpression -> LPAREN expression COMMA expression RPAREN
Rule 30    basicexpression -> TRUE
Rule 31    basicexpression -> FALSE
Rule 32    basicexpression -> NUMBER
Rule 33    basicexpression -> NAME
Rule 34    args -> arg
Rule 35    args -> arg args
Rule 36    arg -> NAME
Rule 37    arg -> LPAREN NAME COMMA NAME RPAREN
Rule 38    command -> CMD_USE SIMPLESTRING
Rule 39    empty -> <empty>

Terminals, with rules where they appear

AND                  : 15
ARROW                : 26
CMD_USE              : 38
COMMA                : 29 37
DIVIDE               : 8
DOUBLESEMICOLON      : 2
ELSE                 : 24
EQUALS               : 10 22 23
FALSE                : 31
FST                  : 19
FUN                  : 26
GEQ                  : 13
GT                   : 14
IF                   : 24
IN                   : 22 23
LEQ                  : 11
LET                  : 22 23
LPAREN               : 28 29 37
LT                   : 12
MINUS                : 6 18
MOD                  : 9
NAME                 : 22 23 26 33 36 37 37
NOT                  : 21
NOTEQUALS            : 17
NUMBER               : 32
OR                   : 16
PLUS                 : 5
RPAREN               : 28 29 37
SIMPLESTRING         : 38
SND                  : 20
THEN                 : 24
TIMES                : 7
TRUE                 : 30
error                : 

Nonterminals, with rules where they appear

arg                  : 34 35
args                 : 23 35
basicexpression      : 25 25 27
command              : 4
empty                : 1
expression           : 3 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 19 20 21 22 22 23 23 24 24 24 26 28 29 29
statement            : 2
statements           : 2 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . empty
    (2) statements -> . statement DOUBLESEMICOLON statements
    (39) empty -> .
    (3) statement -> . expression
    (4) statement -> . command
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression EQUALS expression
    (11) expression -> . expression LEQ expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GEQ expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression NOTEQUALS expression
    (18) expression -> . MINUS expression
    (19) expression -> . FST expression
    (20) expression -> . SND expression
    (21) expression -> . NOT expression
    (22) expression -> . LET NAME EQUALS expression IN expression
    (23) expression -> . LET NAME args EQUALS expression IN expression
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . basicexpression basicexpression
    (26) expression -> . FUN NAME ARROW expression
    (27) expression -> . basicexpression
    (38) command -> . CMD_USE SIMPLESTRING
    (28) basicexpression -> . LPAREN expression RPAREN
    (29) basicexpression -> . LPAREN expression COMMA expression RPAREN
    (30) basicexpression -> . TRUE
    (31) basicexpression -> . FALSE
    (32) basicexpression -> . NUMBER
    (33) basicexpression -> . NAME

    $end            reduce using rule 39 (empty -> .)
    MINUS           shift and go to state 8
    FST             shift and go to state 5
    SND             shift and go to state 14
    NOT             shift and go to state 18
    LET             shift and go to state 10
    IF              shift and go to state 13
    FUN             shift and go to state 6
    CMD_USE         shift and go to state 11
    LPAREN          shift and go to state 2
    TRUE            shift and go to state 7
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 3
    NAME            shift and go to state 16

    statements                     shift and go to state 1
    basicexpression                shift and go to state 4
    command                        shift and go to state 17
    statement                      shift and go to state 9
    expression                     shift and go to state 19
    empty                          shift and go to state 12

state 1

    (0) S' -> statements .



state 2

    (28) basicexpression -> LPAREN . expression RPAREN
    (29) basicexpression -> LPAREN . expression COMMA expression RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression EQUALS expression
    (11) expression -> . expression LEQ expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GEQ expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression NOTEQUALS expression
    (18) expression -> . MINUS expression
    (19) expression -> . FST expression
    (20) expression -> . SND expression
    (21) expression -> . NOT expression
    (22) expression -> . LET NAME EQUALS expression IN expression
    (23) expression -> . LET NAME args EQUALS expression IN expression
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . basicexpression basicexpression
    (26) expression -> . FUN NAME ARROW expression
    (27) expression -> . basicexpression
    (28) basicexpression -> . LPAREN expression RPAREN
    (29) basicexpression -> . LPAREN expression COMMA expression RPAREN
    (30) basicexpression -> . TRUE
    (31) basicexpression -> . FALSE
    (32) basicexpression -> . NUMBER
    (33) basicexpression -> . NAME

    MINUS           shift and go to state 8
    FST             shift and go to state 5
    SND             shift and go to state 14
    NOT             shift and go to state 18
    LET             shift and go to state 10
    IF              shift and go to state 13
    FUN             shift and go to state 6
    LPAREN          shift and go to state 2
    TRUE            shift and go to state 7
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 3
    NAME            shift and go to state 16

    basicexpression                shift and go to state 4
    expression                     shift and go to state 20

state 3

    (32) basicexpression -> NUMBER .

    LPAREN          reduce using rule 32 (basicexpression -> NUMBER .)
    TRUE            reduce using rule 32 (basicexpression -> NUMBER .)
    FALSE           reduce using rule 32 (basicexpression -> NUMBER .)
    NUMBER          reduce using rule 32 (basicexpression -> NUMBER .)
    NAME            reduce using rule 32 (basicexpression -> NUMBER .)
    PLUS            reduce using rule 32 (basicexpression -> NUMBER .)
    MINUS           reduce using rule 32 (basicexpression -> NUMBER .)
    TIMES           reduce using rule 32 (basicexpression -> NUMBER .)
    DIVIDE          reduce using rule 32 (basicexpression -> NUMBER .)
    MOD             reduce using rule 32 (basicexpression -> NUMBER .)
    EQUALS          reduce using rule 32 (basicexpression -> NUMBER .)
    LEQ             reduce using rule 32 (basicexpression -> NUMBER .)
    LT              reduce using rule 32 (basicexpression -> NUMBER .)
    GEQ             reduce using rule 32 (basicexpression -> NUMBER .)
    GT              reduce using rule 32 (basicexpression -> NUMBER .)
    AND             reduce using rule 32 (basicexpression -> NUMBER .)
    OR              reduce using rule 32 (basicexpression -> NUMBER .)
    NOTEQUALS       reduce using rule 32 (basicexpression -> NUMBER .)
    DOUBLESEMICOLON reduce using rule 32 (basicexpression -> NUMBER .)
    RPAREN          reduce using rule 32 (basicexpression -> NUMBER .)
    COMMA           reduce using rule 32 (basicexpression -> NUMBER .)
    THEN            reduce using rule 32 (basicexpression -> NUMBER .)
    IN              reduce using rule 32 (basicexpression -> NUMBER .)
    ELSE            reduce using rule 32 (basicexpression -> NUMBER .)


state 4

    (25) expression -> basicexpression . basicexpression
    (27) expression -> basicexpression .
    (28) basicexpression -> . LPAREN expression RPAREN
    (29) basicexpression -> . LPAREN expression COMMA expression RPAREN
    (30) basicexpression -> . TRUE
    (31) basicexpression -> . FALSE
    (32) basicexpression -> . NUMBER
    (33) basicexpression -> . NAME

    PLUS            reduce using rule 27 (expression -> basicexpression .)
    MINUS           reduce using rule 27 (expression -> basicexpression .)
    TIMES           reduce using rule 27 (expression -> basicexpression .)
    DIVIDE          reduce using rule 27 (expression -> basicexpression .)
    MOD             reduce using rule 27 (expression -> basicexpression .)
    EQUALS          reduce using rule 27 (expression -> basicexpression .)
    LEQ             reduce using rule 27 (expression -> basicexpression .)
    LT              reduce using rule 27 (expression -> basicexpression .)
    GEQ             reduce using rule 27 (expression -> basicexpression .)
    GT              reduce using rule 27 (expression -> basicexpression .)
    AND             reduce using rule 27 (expression -> basicexpression .)
    OR              reduce using rule 27 (expression -> basicexpression .)
    NOTEQUALS       reduce using rule 27 (expression -> basicexpression .)
    DOUBLESEMICOLON reduce using rule 27 (expression -> basicexpression .)
    RPAREN          reduce using rule 27 (expression -> basicexpression .)
    COMMA           reduce using rule 27 (expression -> basicexpression .)
    THEN            reduce using rule 27 (expression -> basicexpression .)
    IN              reduce using rule 27 (expression -> basicexpression .)
    ELSE            reduce using rule 27 (expression -> basicexpression .)
    LPAREN          shift and go to state 2
    TRUE            shift and go to state 7
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 3
    NAME            shift and go to state 16

    basicexpression                shift and go to state 21

state 5

    (19) expression -> FST . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression EQUALS expression
    (11) expression -> . expression LEQ expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GEQ expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression NOTEQUALS expression
    (18) expression -> . MINUS expression
    (19) expression -> . FST expression
    (20) expression -> . SND expression
    (21) expression -> . NOT expression
    (22) expression -> . LET NAME EQUALS expression IN expression
    (23) expression -> . LET NAME args EQUALS expression IN expression
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . basicexpression basicexpression
    (26) expression -> . FUN NAME ARROW expression
    (27) expression -> . basicexpression
    (28) basicexpression -> . LPAREN expression RPAREN
    (29) basicexpression -> . LPAREN expression COMMA expression RPAREN
    (30) basicexpression -> . TRUE
    (31) basicexpression -> . FALSE
    (32) basicexpression -> . NUMBER
    (33) basicexpression -> . NAME

    MINUS           shift and go to state 8
    FST             shift and go to state 5
    SND             shift and go to state 14
    NOT             shift and go to state 18
    LET             shift and go to state 10
    IF              shift and go to state 13
    FUN             shift and go to state 6
    LPAREN          shift and go to state 2
    TRUE            shift and go to state 7
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 3
    NAME            shift and go to state 16

    basicexpression                shift and go to state 4
    expression                     shift and go to state 22

state 6

    (26) expression -> FUN . NAME ARROW expression

    NAME            shift and go to state 23


state 7

    (30) basicexpression -> TRUE .

    LPAREN          reduce using rule 30 (basicexpression -> TRUE .)
    TRUE            reduce using rule 30 (basicexpression -> TRUE .)
    FALSE           reduce using rule 30 (basicexpression -> TRUE .)
    NUMBER          reduce using rule 30 (basicexpression -> TRUE .)
    NAME            reduce using rule 30 (basicexpression -> TRUE .)
    PLUS            reduce using rule 30 (basicexpression -> TRUE .)
    MINUS           reduce using rule 30 (basicexpression -> TRUE .)
    TIMES           reduce using rule 30 (basicexpression -> TRUE .)
    DIVIDE          reduce using rule 30 (basicexpression -> TRUE .)
    MOD             reduce using rule 30 (basicexpression -> TRUE .)
    EQUALS          reduce using rule 30 (basicexpression -> TRUE .)
    LEQ             reduce using rule 30 (basicexpression -> TRUE .)
    LT              reduce using rule 30 (basicexpression -> TRUE .)
    GEQ             reduce using rule 30 (basicexpression -> TRUE .)
    GT              reduce using rule 30 (basicexpression -> TRUE .)
    AND             reduce using rule 30 (basicexpression -> TRUE .)
    OR              reduce using rule 30 (basicexpression -> TRUE .)
    NOTEQUALS       reduce using rule 30 (basicexpression -> TRUE .)
    DOUBLESEMICOLON reduce using rule 30 (basicexpression -> TRUE .)
    RPAREN          reduce using rule 30 (basicexpression -> TRUE .)
    COMMA           reduce using rule 30 (basicexpression -> TRUE .)
    THEN            reduce using rule 30 (basicexpression -> TRUE .)
    IN              reduce using rule 30 (basicexpression -> TRUE .)
    ELSE            reduce using rule 30 (basicexpression -> TRUE .)


state 8

    (18) expression -> MINUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression EQUALS expression
    (11) expression -> . expression LEQ expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GEQ expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression NOTEQUALS expression
    (18) expression -> . MINUS expression
    (19) expression -> . FST expression
    (20) expression -> . SND expression
    (21) expression -> . NOT expression
    (22) expression -> . LET NAME EQUALS expression IN expression
    (23) expression -> . LET NAME args EQUALS expression IN expression
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . basicexpression basicexpression
    (26) expression -> . FUN NAME ARROW expression
    (27) expression -> . basicexpression
    (28) basicexpression -> . LPAREN expression RPAREN
    (29) basicexpression -> . LPAREN expression COMMA expression RPAREN
    (30) basicexpression -> . TRUE
    (31) basicexpression -> . FALSE
    (32) basicexpression -> . NUMBER
    (33) basicexpression -> . NAME

    MINUS           shift and go to state 8
    FST             shift and go to state 5
    SND             shift and go to state 14
    NOT             shift and go to state 18
    LET             shift and go to state 10
    IF              shift and go to state 13
    FUN             shift and go to state 6
    LPAREN          shift and go to state 2
    TRUE            shift and go to state 7
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 3
    NAME            shift and go to state 16

    basicexpression                shift and go to state 4
    expression                     shift and go to state 24

state 9

    (2) statements -> statement . DOUBLESEMICOLON statements

    DOUBLESEMICOLON shift and go to state 25


state 10

    (22) expression -> LET . NAME EQUALS expression IN expression
    (23) expression -> LET . NAME args EQUALS expression IN expression

    NAME            shift and go to state 26


state 11

    (38) command -> CMD_USE . SIMPLESTRING

    SIMPLESTRING    shift and go to state 27


state 12

    (1) statements -> empty .

    $end            reduce using rule 1 (statements -> empty .)


state 13

    (24) expression -> IF . expression THEN expression ELSE expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression EQUALS expression
    (11) expression -> . expression LEQ expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GEQ expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression NOTEQUALS expression
    (18) expression -> . MINUS expression
    (19) expression -> . FST expression
    (20) expression -> . SND expression
    (21) expression -> . NOT expression
    (22) expression -> . LET NAME EQUALS expression IN expression
    (23) expression -> . LET NAME args EQUALS expression IN expression
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . basicexpression basicexpression
    (26) expression -> . FUN NAME ARROW expression
    (27) expression -> . basicexpression
    (28) basicexpression -> . LPAREN expression RPAREN
    (29) basicexpression -> . LPAREN expression COMMA expression RPAREN
    (30) basicexpression -> . TRUE
    (31) basicexpression -> . FALSE
    (32) basicexpression -> . NUMBER
    (33) basicexpression -> . NAME

    MINUS           shift and go to state 8
    FST             shift and go to state 5
    SND             shift and go to state 14
    NOT             shift and go to state 18
    LET             shift and go to state 10
    IF              shift and go to state 13
    FUN             shift and go to state 6
    LPAREN          shift and go to state 2
    TRUE            shift and go to state 7
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 3
    NAME            shift and go to state 16

    basicexpression                shift and go to state 4
    expression                     shift and go to state 28

state 14

    (20) expression -> SND . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression EQUALS expression
    (11) expression -> . expression LEQ expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GEQ expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression NOTEQUALS expression
    (18) expression -> . MINUS expression
    (19) expression -> . FST expression
    (20) expression -> . SND expression
    (21) expression -> . NOT expression
    (22) expression -> . LET NAME EQUALS expression IN expression
    (23) expression -> . LET NAME args EQUALS expression IN expression
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . basicexpression basicexpression
    (26) expression -> . FUN NAME ARROW expression
    (27) expression -> . basicexpression
    (28) basicexpression -> . LPAREN expression RPAREN
    (29) basicexpression -> . LPAREN expression COMMA expression RPAREN
    (30) basicexpression -> . TRUE
    (31) basicexpression -> . FALSE
    (32) basicexpression -> . NUMBER
    (33) basicexpression -> . NAME

    MINUS           shift and go to state 8
    FST             shift and go to state 5
    SND             shift and go to state 14
    NOT             shift and go to state 18
    LET             shift and go to state 10
    IF              shift and go to state 13
    FUN             shift and go to state 6
    LPAREN          shift and go to state 2
    TRUE            shift and go to state 7
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 3
    NAME            shift and go to state 16

    basicexpression                shift and go to state 4
    expression                     shift and go to state 29

state 15

    (31) basicexpression -> FALSE .

    LPAREN          reduce using rule 31 (basicexpression -> FALSE .)
    TRUE            reduce using rule 31 (basicexpression -> FALSE .)
    FALSE           reduce using rule 31 (basicexpression -> FALSE .)
    NUMBER          reduce using rule 31 (basicexpression -> FALSE .)
    NAME            reduce using rule 31 (basicexpression -> FALSE .)
    PLUS            reduce using rule 31 (basicexpression -> FALSE .)
    MINUS           reduce using rule 31 (basicexpression -> FALSE .)
    TIMES           reduce using rule 31 (basicexpression -> FALSE .)
    DIVIDE          reduce using rule 31 (basicexpression -> FALSE .)
    MOD             reduce using rule 31 (basicexpression -> FALSE .)
    EQUALS          reduce using rule 31 (basicexpression -> FALSE .)
    LEQ             reduce using rule 31 (basicexpression -> FALSE .)
    LT              reduce using rule 31 (basicexpression -> FALSE .)
    GEQ             reduce using rule 31 (basicexpression -> FALSE .)
    GT              reduce using rule 31 (basicexpression -> FALSE .)
    AND             reduce using rule 31 (basicexpression -> FALSE .)
    OR              reduce using rule 31 (basicexpression -> FALSE .)
    NOTEQUALS       reduce using rule 31 (basicexpression -> FALSE .)
    DOUBLESEMICOLON reduce using rule 31 (basicexpression -> FALSE .)
    RPAREN          reduce using rule 31 (basicexpression -> FALSE .)
    COMMA           reduce using rule 31 (basicexpression -> FALSE .)
    THEN            reduce using rule 31 (basicexpression -> FALSE .)
    IN              reduce using rule 31 (basicexpression -> FALSE .)
    ELSE            reduce using rule 31 (basicexpression -> FALSE .)


state 16

    (33) basicexpression -> NAME .

    LPAREN          reduce using rule 33 (basicexpression -> NAME .)
    TRUE            reduce using rule 33 (basicexpression -> NAME .)
    FALSE           reduce using rule 33 (basicexpression -> NAME .)
    NUMBER          reduce using rule 33 (basicexpression -> NAME .)
    NAME            reduce using rule 33 (basicexpression -> NAME .)
    PLUS            reduce using rule 33 (basicexpression -> NAME .)
    MINUS           reduce using rule 33 (basicexpression -> NAME .)
    TIMES           reduce using rule 33 (basicexpression -> NAME .)
    DIVIDE          reduce using rule 33 (basicexpression -> NAME .)
    MOD             reduce using rule 33 (basicexpression -> NAME .)
    EQUALS          reduce using rule 33 (basicexpression -> NAME .)
    LEQ             reduce using rule 33 (basicexpression -> NAME .)
    LT              reduce using rule 33 (basicexpression -> NAME .)
    GEQ             reduce using rule 33 (basicexpression -> NAME .)
    GT              reduce using rule 33 (basicexpression -> NAME .)
    AND             reduce using rule 33 (basicexpression -> NAME .)
    OR              reduce using rule 33 (basicexpression -> NAME .)
    NOTEQUALS       reduce using rule 33 (basicexpression -> NAME .)
    DOUBLESEMICOLON reduce using rule 33 (basicexpression -> NAME .)
    RPAREN          reduce using rule 33 (basicexpression -> NAME .)
    COMMA           reduce using rule 33 (basicexpression -> NAME .)
    THEN            reduce using rule 33 (basicexpression -> NAME .)
    IN              reduce using rule 33 (basicexpression -> NAME .)
    ELSE            reduce using rule 33 (basicexpression -> NAME .)


state 17

    (4) statement -> command .

    DOUBLESEMICOLON reduce using rule 4 (statement -> command .)


state 18

    (21) expression -> NOT . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression MOD expression
    (10) expression -> . expression EQUALS expression
    (11) expression -> . expression LEQ expression
    (12) expression -> . expression LT expression
    (13) expression -> . expression GEQ expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . expression NOTEQUALS expression
    (18) expression -> . MINUS expression
    (19) expression -> . FST expression
    (20) expression -> . SND expression
    (21) expression -> . NOT expression
    (22) expression -> . LET NAME EQUALS expression IN expression
    (23) expression -> . LET NAME args EQUALS expression IN expression
    (24) expression -> . IF expression THEN expression ELSE expression
    (25) expression -> . basicexpression basicexpression
    (26) expression -> . FUN NAME ARROW expression
    (27) expression -> . basicexpression
    (28) basicexpression -> . LPAREN expression RPAREN
    (29) basicexpression -> . LPAREN expression COMMA expression RPAREN
    (30) basicexpression -> . TRUE
    (31) basicexpression -> . FALSE
    (32) basicexpression -> . NUMBER
    (33) basicexpression -> . NAME

    MINUS           shift and go to state 8
    FST             shift and go to state 5
    SND             shift and go to state 14
    NOT             shift and go to state 18
    LET             shift and go to state 10
    IF              shift and go to state 13
    FUN             shift and go to state 6
    LPAREN          shift and go to state 2
    TRUE            shift and go to state 7
    FALSE           shift and go to state 15
    NUMBER          shift and go to state 3
    NAME            shift and go to state 16

    basicexpression                shift and go to state 4
    expression                     shift and go to state 30

state 19

    (3) statement -> expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . EQUALS expression
    (11) expression -> expression . LEQ expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GEQ expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . NOTEQUALS expression

    DOUBLESEMICOLON reduce using rule 3 (statement -> expression .)
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 35
    MOD             shift and go to state 43
    EQUALS          shift and go to state 37
    LEQ             shift and go to state 39
    LT              shift and go to state 40
    GEQ             shift and go to state 33
    GT              shift and go to state 34
    AND             shift and go to state 31
    OR              shift and go to state 32
    NOTEQUALS       shift and go to state 36


state 20

    (28) basicexpression -> LPAREN expression . RPAREN
    (29) basicexpression -> LPAREN expression . COMMA expression RPAREN
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . EQUALS expression
    (11) expression -> expression . LEQ expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GEQ expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . NOTEQUALS expression

    RPAREN          shift and go to state 44
    COMMA           shift and go to state 45
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 35
    MOD             shift and go to state 43
    EQUALS          shift and go to state 37
    LEQ             shift and go to state 39
    LT              shift and go to state 40
    GEQ             shift and go to state 33
    GT              shift and go to state 34
    AND             shift and go to state 31
    OR              shift and go to state 32
    NOTEQUALS       shift and go to state 36


state 21

    (25) expression -> basicexpression basicexpression .

    PLUS            reduce using rule 25 (expression -> basicexpression basicexpression .)
    MINUS           reduce using rule 25 (expression -> basicexpression basicexpression .)
    TIMES           reduce using rule 25 (expression -> basicexpression basicexpression .)
    DIVIDE          reduce using rule 25 (expression -> basicexpression basicexpression .)
    MOD             reduce using rule 25 (expression -> basicexpression basicexpression .)
    EQUALS          reduce using rule 25 (expression -> basicexpression basicexpression .)
    LEQ             reduce using rule 25 (expression -> basicexpression basicexpression .)
    LT              reduce using rule 25 (expression -> basicexpression basicexpression .)
    GEQ             reduce using rule 25 (expression -> basicexpression basicexpression .)
    GT              reduce using rule 25 (expression -> basicexpression basicexpression .)
    AND             reduce using rule 25 (expression -> basicexpression basicexpression .)
    OR              reduce using rule 25 (expression -> basicexpression basicexpression .)
    NOTEQUALS       reduce using rule 25 (expression -> basicexpression basicexpression .)
    DOUBLESEMICOLON reduce using rule 25 (expression -> basicexpression basicexpression .)
    RPAREN          reduce using rule 25 (expression -> basicexpression basicexpression .)
    COMMA           reduce using rule 25 (expression -> basicexpression basicexpression .)
    THEN            reduce using rule 25 (expression -> basicexpression basicexpression .)
    IN              reduce using rule 25 (expression -> basicexpression basicexpression .)
    ELSE            reduce using rule 25 (expression -> basicexpression basicexpression .)


state 22

    (19) expression -> FST expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . EQUALS expression
    (11) expression -> expression . LEQ expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GEQ expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . NOTEQUALS expression

    PLUS            reduce using rule 19 (expression -> FST expression .)
    MINUS           reduce using rule 19 (expression -> FST expression .)
    TIMES           reduce using rule 19 (expression -> FST expression .)
    DIVIDE          reduce using rule 19 (expression -> FST expression .)
    MOD             reduce using rule 19 (expression -> FST expression .)
    EQUALS          reduce using rule 19 (expression -> FST expression .)
    LEQ             reduce using rule 19 (expression -> FST expression .)
    LT              reduce using rule 19 (expression -> FST expression .)
    GEQ             reduce using rule 19 (expression -> FST expression .)
    GT              reduce using rule 19 (expression -> FST expression .)
    AND             reduce using rule 19 (expression -> FST expression .)
    OR              reduce using rule 19 (expression -> FST expression .)
    NOTEQUALS       reduce using rule 19 (expression -> FST expression .)
    DOUBLESEMICOLON reduce using rule 19 (expression -> FST expression .)
    RPAREN          reduce using rule 19 (expression -> FST expression .)
    COMMA           reduce using rule 19 (expression -> FST expression .)
    THEN            reduce using rule 19 (expression -> FST expression .)
    IN              reduce using rule 19 (expression -> FST expression .)
    ELSE            reduce using rule 19 (expression -> FST expression .)

  ! PLUS            [ shift and go to state 41 ]
  ! MINUS           [ shift and go to state 42 ]
  ! TIMES           [ shift and go to state 38 ]
  ! DIVIDE          [ shift and go to state 35 ]
  ! MOD             [ shift and go to state 43 ]
  ! EQUALS          [ shift and go to state 37 ]
  ! LEQ             [ shift and go to state 39 ]
  ! LT              [ shift and go to state 40 ]
  ! GEQ             [ shift and go to state 33 ]
  ! GT              [ shift and go to state 34 ]
  ! AND             [ shift and go to state 31 ]
  ! OR              [ shift and go to state 32 ]
  ! NOTEQUALS       [ shift and go to state 36 ]


state 23

    (26) expression -> FUN NAME . ARROW expression

    ARROW           shift and go to state 46


state 24

    (18) expression -> MINUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . MOD expression
    (10) expression -> expression . EQUALS expression
    (11) expression -> expression . LEQ expression
    (12) expression -> expression . LT expression
    (13) expression -> expression . GEQ expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (17) expression -> expression . NOTEQUALS expression

    PLUS            reduce using rule 18 (expression -> MINUS expression .)
    MINUS           reduce using rule 18 (expression -> MINUS expression .)
    TIMES           reduce using rule 18 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 18 (expression -> MINUS expression .)
    MOD             reduce using rule 18 (expression -> MINUS expression .)
    EQUALS          reduce using rule 18 (expression -> MINUS expression .)
    LEQ             reduce using rule 18 (expression -> MINUS expression .)
    LT              reduce using rule 18 (expression -> MINUS expression .)
    GEQ             reduce using rule 18 (expression -> MINUS expression .)
    GT              reduce using rule 18 (expression -> MINUS expression .)
    AND             reduce using rule 18 (expression -> MINUS expression .)
    OR              reduce using rule 18 (expression -> MINUS expression .)
    NOTEQUALS       reduce using rule 18 (expression -> MINUS expression .)
    DOUBLESEMICOLON reduce using rule 18 (expression -> MINUS expression .)
    RPAREN          reduce using rule 18 (expression -> MINUS expression .)
    COMMA           reduce using rule 18 (expression -> MINUS expression .)
    THEN            reduce using rule 18 (expression -> MINUS expression .)
    IN              reduce using rule 18 (expression -> MINUS expression .)
    ELSE            reduce using rule 18 (expression -> MINUS expression .)
